CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_CAPACITY_c__x.object
<CustomObject>
    <externalDataSource>OEC_Provider_Datasource</externalDataSource>
    <externalName>OEC_Capacity__c</externalName>
    <fields>
        <fullName>CDE_MAX_AGE_TYPE__c</fullName>
        <externalDeveloperName>OEC_OldestAgeType__c</externalDeveloperName>
        <label>Oldest Age Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_MIN_AGE_TYPE__c</fullName>
        <externalDeveloperName>OEC_YoungestAgeType__c</externalDeveloperName>
        <label>Youngest Age Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS__c</fullName>
        <externalDeveloperName>OEC_Status__c</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHILDREN_NBR__c</fullName>
        <externalDeveloperName>OEC_Capacity__c</externalDeveloperName>
        <label>Number of Children</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <externalDeveloperName>OEC_ProgramName__c</externalDeveloperName>
        <label>Provider ID</label>
        <length>20</length>
        <referenceTargetField>T_CHATS_PROVR_STATUS__c.Program_Name__c</referenceTargetField>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Provider Capacities (Provider ID)</relationshipLabel>
        <relationshipName>Provider_Capacities</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>MAX_AGE__c</fullName>
        <externalDeveloperName>OEC_OldestAgeAuthorized__c</externalDeveloperName>
        <label>Oldest Age Authorized to Serve</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_AGE__c</fullName>
        <externalDeveloperName>OEC_YoungestAgeAuthorized__c</externalDeveloperName>
        <label>Youngest Age Authorized to Serve</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <externalDeveloperName>OEC_ProgramName__c</externalDeveloperName>
        <label>Program Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <externalDeveloperName>OEC_EffectiveStartDate__c</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <externalDeveloperName>OEC_EffectiveEndDate__c</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <label>Provider Capacity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>DisplayUrl</columns>
        <columns>CHILDREN_NBR__c</columns>
        <columns>Program_Name__c</columns>
        <columns>MAX_AGE__c</columns>
        <columns>CDE_MAX_AGE_TYPE__c</columns>
        <columns>IDN_PROVR__c</columns>
        <columns>MIN_AGE__c</columns>
        <columns>CDE_MIN_AGE_TYPE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Name__c</field>
            <operation>equals</operation>
            <value>001o000000JBFG9</value>
        </filters>
        <label>All</label>
    </listViews>
    <pluralLabel>Provider Capacities</pluralLabel>
</CustomObject>