CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_CAPACITY_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>CHILDREN_NBR__c</columns>
    <columns>Program_Name__c</columns>
    <columns>MAX_AGE__c</columns>
    <columns>CDE_MAX_AGE_TYPE__c</columns>
    <columns>IDN_PROVR__c</columns>
    <columns>MIN_AGE__c</columns>
    <columns>CDE_MIN_AGE_TYPE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Name__c</field>
        <operation>equals</operation>
        <value>001o000000JBFG9</value>
    </filters>
    <label>All</label>
</ListView>